<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to ShinyTour!</string>
    <string name="app_name">ShinyTour</string>
    <string name="ShinyTour">ShinyTour</string>
    <string name="RegActivity">注册</string>
  	<string name="FunctionTab">个人中心</string>
  	<string name="PublishActivity">快速发布</string>
  	<string name="ContactsActivity">最近访客</string>
  	<string name="DiaryActivity">日志</string>
  	<string name="AlbumActivity">相册</string>
  	<string name="CommentActivity">评论</string>
  	<string name="UploadActivity">照片上传</string>
  	<string name="ShootActivity">拍照</string>
  	<string name="HomePageActivity">晒友主页</string>
  	<string name="SearchActivity">搜索晒友</string>
  	<string name="AlbumListActivity">相册列表</string>
  	<string name="MyAlbumListActivity">我的相册</string>
  	<string name="MyDiaryActivity">我的游迹</string>
  	<string name="ModifyDiary">修改游迹</string>
  	<string name="ReadDiary">查看游迹</string>
    <string name="tvUid">账 号：</string>
    <string name="tvPwd">密 码：</string>
    <string name="btnLogin">登录</string>
    <string name="btnReg">注册</string>
	<string name="cbRemember">记住我</string>
	<string name="tvName">昵称：</string>
	<string name="tvPwd2">确认密码：</string>
	<string name="tvEmail">邮箱：</string>
	<string name="tvStatus">心情：</string>
	<string name="etStatus">Happy!</string>
	<string name="regSuccess">注册成功，您的游迹号为：</string>
	<string name="btnEnter">进入个人中心</string>
	<string name="tvTitle">标题：</string>
	<string name="hintDiary">写点什么吧！</string>
	<string name="btnDiary">发表</string>
	<string name="btnDiaryPhoto">插入图片</string>
	<string name="category">你会怎样形容你的旅程？</string>
	<string name="btnStatus">更新心情</string>
	<string name="tvAlbum">请选择相册：</string>
	<string name="btnUploadPhoto">确定上传</string>
	<string name="btnBack">返回</string>
	<string name="btnShoot">拍照上传</string>
	<string name="tvChooseAlbum">选择相册：</string>
	<string name="btnNewAlbum">新建</string>
	<string name="tvAlbumName">新建相册名称：</string>
	<string name="btnOk">确定</string>
	<string name="tvPhotoName">照片名称：</string>
	<string name="tvPhotoDes">照片描述：</string>
	<string name="tvPhotoLocation">拍摄地点:</string>
	<string name="btnComment">发表评论</string>
	<string name="btnSearch">搜索</string>
	<string name="btnDelete">删除</string>
	<string name="tvInputStatus">更新您的心情：</string>
	<string name="hintStatus">今天心情怎么样？</string>
	<string name="btnEdit">编辑</string>
	<string name="btnRead">查看</string>
	<string name="btnPublishMofify">发布修改</string>
	
	<string name="player">探索</string>
	<string name="list">相册</string>
	<string name="online">游记</string>
	<string name="menu">我</string>
	<string name="publish">发布</string>
	
	<string name="str_message">发送邮件</string>
	
	
</resources>
