<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:background="@drawable/back_register"
	android:paddingTop="80dp"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>													<!-- 声明一个线性布局 -->

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" > <!-- 声明一个显示昵称的线性布局 -->

	    <TextView
	        style="@style/text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/tvName" />

	    <EditText
	        android:id="@+id/etName"
	        android:layout_width="158dp"
	        android:layout_height="50dp"
	        android:singleLine="true" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>												<!-- 声明显示密码的线性布局 -->

		<TextView
		    style="@style/text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:text="@string/tvPwd" />

		<EditText
		    android:id="@+id/etPwd1"
		   	android:layout_width="158dp"
	        android:layout_height="50dp"
		    android:password="true"
		    android:singleLine="true" />

		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
												
			<!-- 声明显示确认密码的线性布局 -->

		<TextView
		    style="@style/text"
		    android:paddingLeft="19dp"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:text="@string/tvPwd2" />
										<!-- 声明TextView控件 -->
		<EditText
		    android:id="@+id/etPwd2"
		   	android:layout_width="158dp"
	        android:layout_height="50dp"
		    android:password="true"
		    android:singleLine="true" />
										<!-- 声明输入确认密码EditText控件 -->
		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>											<!-- 声明包含Email输入的线性布局 -->
		<TextView 
			android:text="@string/tvEmail"
			style="@style/text"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			/>

		<EditText
		    android:id="@+id/etEmail"
		    android:layout_width="158dp"
	        android:layout_height="50dp"
		    android:singleLine="true" />

		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">					
								<!-- 声明包含心情输入的线性布局 -->
		<TextView 
			android:text="@string/tvStatus"
			style="@style/text"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			/>

		<EditText
		    android:id="@+id/etStatus"
		   	android:layout_width="158dp"
	        android:layout_height="50dp"
		    android:singleLine="true"
		    android:text="@string/etStatus" />

		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="12dp"
		>
		<Button
			android:id="@+id/btnReg"
			style="@style/button"
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:background="@drawable/buton_back"
			android:text="@string/btnReg"
			/>
		<Button
			android:id="@+id/btnBack"
			style="@style/button"
			android:layout_width="120px"
			 android:background="@drawable/buton_back"
			android:layout_height="wrap_content"
			android:text="@string/btnBack"
			/>
		</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:visibility="gone"
		android:id="@+id/regResult"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:text="@string/regSuccess"
				style="@style/text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:id="@+id/etUno"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:cursorVisible="false"
				/>
			</LinearLayout>
		<Button
			android:id="@+id/btnEnter"
			style="@style/text"
			android:layout_gravity="right"
			android:text="@string/btnEnter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		</LinearLayout>
</LinearLayout>
