<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle" />

        <TextView
            style="@style/content"
            android:id="@+id/etModifyTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
	<LinearLayout 
	   android:layout_width="fill_parent"
       android:layout_height="4dip"
       android:orientation="horizontal"
       android:background="@drawable/bolangxian"  >
	    
	</LinearLayout>
    <TextView
        style="@style/content"
        android:id="@+id/etModifyDiary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.67"
        android:hint="@string/hintDiary"
        />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnModifyDiary"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
             android:background="@layout/imgbutton"
            android:text="@string/btnEdit" />

        <Button
            android:id="@+id/btnModifyDiaryBack"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
             android:background="@layout/imgbutton"
            android:text="@string/btnBack" />
    </LinearLayout>

</LinearLayout>