<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/etDiary"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.92"
        android:hint="@string/hintDiary"
        android:lines="5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnInsertPic"
            style="@style/button"
            android:layout_width="66dp"
            android:layout_height="30dp"
            android:background="@layout/imgbutton"
            android:text="插入图片" />

        <Button
            android:id="@+id/btnDiary"
            style="@style/button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@layout/imgbutton"
            android:text="@string/btnDiary" />

        <Button
            android:id="@+id/btnDiaryBack"
            style="@style/button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@layout/imgbutton"
            android:text="@string/btnBack" />
    </LinearLayout>

</LinearLayout>