<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_login"
    android:gravity="center_horizontal"
    android:orientation="vertical" > <!-- 声明垂直分布的线性布局 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="265px" ><!-- LTC 452px  Amanda 265px-->

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvUid" />

        <EditText
            android:id="@+id/etUid"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tvPwd" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:password="true"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cbRemember"
            android:textColor="@color/character" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLogin"
            style="@style/button"
            android:layout_width="120px"
            android:layout_height="30dp"
            android:background="@layout/imgbutton"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnReg"
            style="@style/button"
            android:layout_width="120px"
            android:layout_height="30dp"
            android:background="@layout/imgbutton"
            android:text="@string/btnReg" />
    </LinearLayout>

</LinearLayout>
